# data-model-examples

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.docs.md  README.md  build.sh  cookiecutter.json  pyproject.toml
{{cookiecutter.buildfolder}}/: .env  LICENSE.code.md  README.md  cdf-login.sh  clean_and_load.sh  delete_data.py  describe_datamodel.py  dump_datamodel.py  dump_transformations.py  inventory.json  inventory.py  load_data.py  pyproject.toml  requirements.txt  restore_datamodel.py  run_transformations.py
{{cookiecutter.buildfolder}}/apm_simple/: README.md  Valhall Operational States 2.ipynb  load_datamodel.sh  run_transformations.sh
{{cookiecutter.buildfolder}}/apm_simple/data/: asset2children.csv
{{cookiecutter.buildfolder}}/apm_simple/transformations/: assets.sql  assets.yaml  link_asset2children.sql  link_asset2children.yaml  link_workitems2workorders.sql  link_workorders2assets.sql  link_workorders2assets.yaml  workitems.sql  workitems.yaml  workitems2assets.yaml  workitems2workorders.yaml  workorders.sql  workorders.yaml
{{cookiecutter.buildfolder}}/examples/apm_simple/: LICENSE.dataset.md  README.md  datamodel.graphql  requirements.txt
{{cookiecutter.buildfolder}}/examples/apm_simple/data_model/: Asset.container.json  Asset.view.json  WorkItem.container.json  WorkItem.view.json  WorkOrder.container.json  WorkOrder.view.json  datamodel.json
{{cookiecutter.buildfolder}}/examples/apm_simple/transformations/: timeseries2assets.yaml  workitems2workorders.yaml
{{cookiecutter.buildfolder}}/examples/apm_simple/transformations/dump/: tutorial-load-asset2children.json  tutorial-load-assets.json  tutorial-load-timeseries2assets.json  tutorial-load-workitems.json  tutorial-load-workitems2assets.json  tutorial-load-workorders.json  (+2 more)
{{cookiecutter.buildfolder}}/examples/movie_actors/data_model/: Actor.container.json  Actor.view.json  Director.container.json  Director.view.json  Movie.container.json  Movie.view.json  Person.container.json  Person.view.json  datamodel.json
{{cookiecutter.buildfolder}}/examples/movie_actors/transformations/: actor-movie-appearances.yaml  actors.yaml  directors.yaml  movies.yaml
{{cookiecutter.buildfolder}}/movie_actors/: LICENSE.dataset.md  README.md  load_datamodel.sh
{{cookiecutter.buildfolder}}/movie_actors/data/: actors.csv  directors.csv
{{cookiecutter.buildfolder}}/movie_actors/transformations/: actor-movie-appearances.yaml  actors.yaml  directors.yaml  movies.yaml
{{cookiecutter.buildfolder}}/utils/: README.md  __init__.py  datamodel.py  delete.py  load.py  transformations.py  utils.py
(+44 files in other folders)
