[tool.poetry]
name = "data-model-examples"
version = "0.2.0"
description = "Data modeling examples for Cognite Data Fusion"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.3.0"
click = "^8.1.7"
python-dotenv = "^1.0.0"
cognite-sdk = {version = "6.15.0", extras = ["pandas"]}
pandas = "^2.0.3"
pyyaml = "^6.0.1"
dacite = "^1.8.1"
regex = "^2023.6.3"
chardet = "^5.1.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
