[tool.poetry]
name = "cognite-data-model-examples"
version = "0.2.0"
description = "Toolkit and data modeling examples for Cognite Data Fusion"
authors = ["Greger Teigre Wedel <greger.wedel@cognite.com>"]
license = "Apache 2.0"
# Note: this package is not for general install or distribution
# It is just a convenience to pip install utils locally.
packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
cookiecutter = "^2.4.0"
click = "^8.1.7"
python-dotenv = "^1.0.0"
cognite-sdk = {version = "6.39.6", extras = ["pandas"]}
pandas = "^2.1.1"
pyyaml = "^6.0.1"
dacite = "^1.8.1"
regex = "^2023.6.3"
chardet = "^5.1.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
